--- a/themes/finna2/less/finna/finnaicons.less
+++ b/themes/finna2/less/finna/finnaicons.less
@@ -668,22 +668,6 @@ table .iconlabel {
     content: "\e00d";
 }
 
-.nav-dropdown-toggle {
-    &:before {
-        font-family: 'icomoon';
-        content: "\e00d";
-        margin-right: 5px;
-        font-size: 1.3em;
-        vertical-align: middle;
-    }
-    &:after {
-        font-family: icomoon;
-        content: "\e613";
-        vertical-align: middle;
-        margin-left: 5px;
-    }
-}
-
 /** toolbar icons **/
 .nav-pills .fa {
     font-family: icomoon;
